cabal-version:       >=1.10
name:                covid-scrape
version:             0.1
synopsis:            Tools for scraping COVID-19 data from various sources
-- description:
bug-reports:         https://github.com/covid-db/covid-scrapers/issues
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardsley
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

extra-source-files:
  default.nix
  README.md

Source-repository head
  Type:     git
  Location: https://github.com/covid-db/covid-db.git

library
  exposed-modules:
    Covid19
    Covid19.NewYork
    Covid19.Place
    Covid19.Report
    Covid19.Utah

  other-modules:
    Covid19.Instances

  build-depends:
    HsOpenSSL,
    aeson,
    base >= 4.6 && < 4.14,
    beam-core,
    beam-migrate,
    bytestring,
    cassava,
    containers >= 0.5 && < 0.7,
    errors,
    http-streams,
    lens,
    lens-aeson,
    lens-csv,
    parsec,
    string-conv,
    tagsoup,
    tagsoup-parsec,
    text >= 1.2 && < 1.3,
    time >= 1.4 && < 1.10

  ghc-options: -Wall -threaded
  hs-source-dirs: lib
  default-language: Haskell2010

executable covid-scrape
  hs-source-dirs: exe
  main-is: Main.hs
  -- other-modules:
  build-depends:
    covid-scrape,
    base >=4.13 && <4.14,
    bytestring,
    optparse-applicative,
    text,
    time
  ghc-options: -Wall -threaded
  default-language: Haskell2010
